# muddler

./: .gitignore  README.md  muddler.py  pyproject.toml
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  main.jsx  utils.js
frontend/src/components/: AboutModal.jsx  GroupAccordion.jsx  InputPanel.jsx  ModeRow.jsx  ResultsPanel.jsx  ScaleRow.jsx  StatusMessage.jsx
frontend/src/hooks/: useMuddler.js
frontend/src/styles/: main.css
src/muddler/: app.py  cli.py  core.py
static/: app.js  index.html  style.css
